--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -2355,7 +2355,7 @@ onboarding:
     text: |
       We built Directus to be completely customizable. From colors to logo, you can give your project a distinct identity to make it truly *yours*.
 
-      Don't worry if you're not ready to customize yet – these can all be revisited later and easily removed or changed from inside the project settings.
+      Don't worry if you're not ready to customize yet — these can all be revisited later and easily removed or changed from inside the project settings.
     use_case: What are you planning to use Directus for?
     personal: Personal project
     work: Business
@@ -2376,7 +2376,7 @@ onboarding:
   theming-project:
     title: Let's setup your project theme
     text: |
-      The Directus Theming Engine contains two customizable themes - Light Theme and Dark Theme. Both themes can be updated for all users (in the Settings Module), or for specific users (in the Users Module).
+      The Directus Theming Engine contains two customizable themes — Light Theme and Dark Theme. Both themes can be updated for all users (in the Settings Module), or for specific users (in the Users Module).
   loading:
     title: Setting up your project...
     text: |
