mv theme-name-translations from fields to root

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -316,6 +316,9 @@ geometry.MultiPolygon: MultiPolygon
 theme_auto: Automatic (Based on System)
 theme_light: Light Mode
 theme_dark: Dark Mode
+theme_directus_default: Directus Default
+theme_directus_minimal: Directus Minimal
+theme_directus_colormatch: Directus Color Match
 not_available_for_type: Not Available for this Type
 create_translations: Create Translations
 auto_refresh: Auto Refresh
@@ -1277,9 +1280,6 @@ fields:
     default_appearance: Default Appearance
     default_theme_light: Default Theme Light
     default_theme_dark: Default Theme Dark
-    default_theme_directus: Directus Default
-    default_theme_minimal: Directus Minimal
-    default_theme_colormatch: Directus Color Match
     auth_password_policy: Auth Password Policy
     auth_login_attempts: Auth Login Attempts
     files_and_thumbnails: Files & Storage
