--- a/app/src/lang/translations/ar-SA.yaml
+++ b/app/src/lang/translations/ar-SA.yaml
@@ -152,7 +152,7 @@ validationError:
   required: هذه القيمة مطلوبة
   unique: القيمة يجب أن تكون
   regex: القيمة لا تحتوي على التنسيق الصحيح
-  starts_with: 'https://crowdin.com/translate/directus/70/en-ar?filter=basic&value=0#'
+  starts_with: 'https://crowdin. com/translate/directus/70/en-ar? filter=basic&value=0#'
   istarts_with: Arabic Translations
   nstarts_with: يجب أن لا تحتوي القيمة على {substring}
   nistarts_with: Arabic Translations
@@ -267,8 +267,8 @@ create_translations: إنشاء ترجمات
 auto_refresh: تحديث تلقائي
 refresh_interval: الفاصل الزمني للتحيين
 no_refresh: المتابعة على أية حال
-refresh_interval_seconds: كل | كل ثانية | تحديث فورًا {seconds} ثانية
-refresh_interval_minutes: كل | كل دقيقة {minutes} دقيقة
+refresh_interval_seconds: تحديث فوراً <unk> كل ثانية <unk> كل {seconds} ثانية
+refresh_interval_minutes: كل دقيقة <unk> كل {minutes} دقيقة
 auto_generate: إنشاء تلقائي
 this_will_auto_setup_fields_relations: سيؤدي هذا تلقائياً إلى إعداد جميع الحقول والعلاقات المطلوبة.
 click_here: اضغط هنا
