--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -73,6 +73,8 @@ extension_hooks: Hooks
 extension_endpoints: Endpoints
 extension_operations: Operations
 extension_bundles: Bundles
+extension_reload_required: A page reload is required to see the changes after enabling or disabling app extensions.
+reload_page: Reload now
 enable: Enable
 disable: Disable
 custom: Custom
