--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -73,8 +73,9 @@ extension_hooks: Hooks
 extension_endpoints: Endpoints
 extension_operations: Operations
 extension_bundles: Bundles
-extension_reload_required: A page reload is required to see the changes after enabling or disabling app extensions.
-reload_page: Reload now
+extension_reload_required: Page reload required
+extension_reload_required_copy: A page reload is required to see the changes after enabling or disabling app extensions.
+extension_reload_now: Reload now
 enable: Enable
 disable: Disable
 custom: Custom
