place initial focal point to saved value or center, display different cancel text

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -503,6 +503,7 @@ months:
   december: December
 drag_mode: Drag Mode
 cancel_crop: Cancel Crop
+cancel_selection: Cancel Selection
 original: Original
 url: URL
 import_label: Import
