added support for indices

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -382,6 +382,7 @@ soft_length: Soft Limit
 precision_scale: Precision & Scale
 readonly: Readonly
 unique: Unique
+indexed: Index
 updated_on: Updated On
 updated_by: Updated By
 primary_key: Primary Key
@@ -833,6 +834,7 @@ columns: Columns
 collection_setup: Collection Setup
 optional_system_fields: Optional Fields
 value_unique: Value has to be unique
+value_indexed: Value needs to be indexed
 all_activity: All Activity
 create_item: Create Item
 display_template: Display Template
