New Crowdin updates (#20507)
* New translations en-us.yaml (Indonesian)

* New translations en-us.yaml (French)

* New translations en-us.yaml (Russian)

* New translations en-us.yaml (Romanian)

* New translations en-us.yaml (Danish)

* New translations en-us.yaml (Romanian)

* New translations en-us.yaml (Arabic)

* New translations en-us.yaml (Italian)

* New translations en-us.yaml (French)

* New translations en-us.yaml (Spanish, Mexico)

* New translations en-us.yaml (Hebrew)

* New translations en-us.yaml (Hebrew)

* New translations en-us.yaml (Spanish, Latin America)

* Update source file en-US.yaml

* New translations en-us.yaml (Italian)

* New translations en-us.yaml (Spanish, Mexico)

* New translations en-us.yaml (French)

* New translations en-us.yaml (Russian)

* New translations en-us.yaml (German)

* New translations en-us.yaml (Polish)

* New translations en-us.yaml (Slovak)

* New translations en-us.yaml (Turkish)

* New translations en-us.yaml (Chinese Simplified)

* New translations en-us.yaml (French, Canada)

* New translations en-us.yaml (Dutch)

* New translations en-us.yaml (Dutch)

* New translations en-us.yaml (Arabic)

* New translations en-us.yaml (Italian)

* New translations en-us.yaml (Spanish, Mexico)

* New translations en-us.yaml (Romanian)

* New translations en-us.yaml (French)

* New translations en-us.yaml (Danish)

* New translations en-us.yaml (Russian)

* New translations en-us.yaml (Spanish, Latin America)

* New translations en-us.yaml (Spanish)

* New translations en-us.yaml (Bulgarian)

* New translations en-us.yaml (Catalan)

* New translations en-us.yaml (Czech)

* New translations en-us.yaml (German)

* New translations en-us.yaml (Finnish)

* New translations en-us.yaml (Hungarian)

* New translations en-us.yaml (Japanese)

* New translations en-us.yaml (Korean)

* New translations en-us.yaml (Dutch)

* New translations en-us.ya

--- a/app/src/lang/translations/bg-BG.yaml
+++ b/app/src/lang/translations/bg-BG.yaml
@@ -593,7 +593,6 @@ errors:
   VALUE_OUT_OF_RANGE: Стойността е извън границите
   INVALID_FOREIGN_KEY: Невалиден външен ключ
   UNKNOWN: Неочаквана грешка
-  GRAPHQL_VALIDATION_EXCEPTION: Изключение при валидацията в GraphQL
   SERVICE_UNAVAILABLE: Услугата е недостъпна
   UNSUPPORTED_MEDIA_TYPE: Неподдържан медиен формат
   UNEXPECTED_RESPONSE: Неочакван отговор от сървъра
@@ -1812,6 +1811,8 @@ displays:
     icon: Икона
     border: Рамка
     border_label: Показване на рамката
+    mask: Маскиране
+    mask_label: Скриване на истинската стойност
     text: Текст
     text_placeholder: Заместващ текст...
   formatted-json-value:
