--- a/app/src/lang/translations/id-ID.yaml
+++ b/app/src/lang/translations/id-ID.yaml
@@ -87,6 +87,10 @@ create_user: Buat User
 message: Pesan
 delete_panel: Hapus Panel
 create_webhook: Buat Webhook
+create_custom_translation: Buat Terjemahan Khusus
+edit_custom_translation: Ubah Terjemahan Khusus
+no_custom_translations: Tidak Ada Terjemahan Khusus
+no_custom_translations_copy: Belum ada terjemahan khusus.
 invite_users: Undang Pengguna Lain
 invite: Undang
 email_already_invited: Email "{email}" sudah diundang
@@ -102,6 +106,7 @@ rename_folder: Ubah nama folder
 delete_folder: Hapus Folder
 prefix: Awalan
 suffix: Akhiran
+version_name: Nama Versi
 promote_version_preview: Pratinjau
 reset_bookmark: Hapus Markah
 update_bookmark: Hapus Markah
@@ -603,7 +608,6 @@ errors:
   VALUE_OUT_OF_RANGE: Nilai di luar rentang
   INVALID_FOREIGN_KEY: Foreign key tidak valid
   UNKNOWN: Kesalahan Tidak Terduga
-  GRAPHQL_VALIDATION_EXCEPTION: Pengecualian Validasi GraphQL
   SERVICE_UNAVAILABLE: Layanan Tidak Tersedia
   UNSUPPORTED_MEDIA_TYPE: Jenis media tidak didukung
   UNEXPECTED_RESPONSE: Respon tidak terduga
