--- a/app/src/lang/translations/it-IT.yaml
+++ b/app/src/lang/translations/it-IT.yaml
@@ -59,6 +59,7 @@ extension_display: Mostra
 extension_layout: Layout
 extension_module: Modulo
 extension_panel: Pannello
+extension_theme: Tema
 extension_hook: Hook
 extension_endpoint: Endpoint
 extension_operation: Operazione
@@ -68,6 +69,7 @@ extension_displays: Visualizzazioni
 extension_layouts: Layout
 extension_modules: Moduli
 extension_panels: Pannelli
+extension_themes: Temi
 extension_hooks: Hook
 extension_endpoints: Endpoint
 extension_operations: Operazioni
@@ -309,6 +311,9 @@ geometry.MultiPolygon: MultiPolygon
 theme_auto: Automatico (in base al sistema)
 theme_light: Tema chiaro
 theme_dark: Tema scuro
+theme_directus_default: Predefinito
+theme_directus_minimal: Minimalista
+theme_directus_colormatch: Corrispondenza colore
 not_available_for_type: Non disponibile per questo typo
 create_translations: Crea traduzioni
 auto_refresh: Aggiornamento automatico
@@ -325,7 +330,7 @@ click_to_manage_translated_fields: >-
 fields_group: Gruppo campi
 no_collections_found: Nessuna raccolta trovata.
 new_data_alert: 'Verranno creati i seguenti dati all''interno del tuo modello:'
-search_collection: Cerca nella raccolta...
+search_collection: Cerca raccolta...
 search_field: Campo di ricerca...
 new_field: 'Nuovo campo'
 new_collection: 'Nuova Raccolta'
@@ -674,7 +679,6 @@ errors:
   VALUE_OUT_OF_RANGE: Il valore è fuori dall'intervallo
   INVALID_FOREIGN_KEY: Chiave esterna non valida
   UNKNOWN: Errore Imprevisto
-  GRAPHQL_VALIDATION_EXCEPTION: Eccezione di validazione GraphQL
   SERVICE_UNAVAILABLE: Servizio non disponibile
   UNSUPPORTED_MEDIA_TYPE: Tipo di file non supportato
   UNEXPECTED_RESPONSE: Risposta inattesa
@@ -1220,6 +1224,9 @@ fields:
     last_page: Ultima Pagina
     last_access: Ultimo Acesso
     email_notifications: Notifiche email
+    appearance: Aspetto
+    theme_light: Tema chiaro
+    theme_dark: Tema scuro
     theme_light_overrides: Personalizzazione del tema chiaro
     theme_dark_overrides: Personalizzazione del tema scuro
   directus_settings:
@@ -1250,6 +1257,9 @@ fields:
     public_background: Sfondo Pubblico
     public_note: Nota Pubblica
     theming: Impostazioni predefinite dei temi
+    default_appearance: Aspetto predefinito
+    default_theme_light: Tema chiaro predefinito
+    default_theme_dark: Tema scuro predefinito
     auth_password_policy: Sicurezza della password
     auth_login_attempts: Tentativi di accesso
     files_and_thumbnails: File e archiviazione
@@ -1977,6 +1987,8 @@ displays:
     icon: Icona
     border: Bordo
     border_label: Mostra bordo
+    mask: Nascosto
+    mask_label: Nascondi il valore reale
     text: Text
     text_placeholder: Testo opzionale ridefinito...
   formatted-json-value:
