--- a/app/src/lang/translations/cs-CZ.yaml
+++ b/app/src/lang/translations/cs-CZ.yaml
@@ -602,7 +602,6 @@ errors:
   VALUE_OUT_OF_RANGE: Hodnota je mimo rozsah
   INVALID_FOREIGN_KEY: Neplatný cizí klíč
   UNKNOWN: Neočekávaná chyba
-  GRAPHQL_VALIDATION_EXCEPTION: GraphQL Validation Exception
   SERVICE_UNAVAILABLE: Služba není dostupná
   UNSUPPORTED_MEDIA_TYPE: Nepodporovaný typ média
   UNEXPECTED_RESPONSE: Neočekávaná odpověď
@@ -1790,6 +1789,8 @@ displays:
     icon: Ikona
     border: Ohraničení
     border_label: Zobrazit ohraničení
+    mask: Maskovaná
+    mask_label: Skrýt skutečnou hodnotu
     text: Text
     text_placeholder: Volitelné přetížení hodnoty...
   formatted-json-value:
