--- a/app/src/lang/translations/fa-IR.yaml
+++ b/app/src/lang/translations/fa-IR.yaml
@@ -610,7 +610,6 @@ errors:
   VALUE_OUT_OF_RANGE: مقدار، خارج از محدوده است
   INVALID_FOREIGN_KEY: کلید خارجی نامعتبر است
   UNKNOWN: خطای غیر منتظره
-  GRAPHQL_VALIDATION_EXCEPTION: استثناء اعتبار سنجی GraphQL
   SERVICE_UNAVAILABLE: سرویس در دسترس نیست
   UNSUPPORTED_MEDIA_TYPE: رسانه پشتیبانی نشده
   UNEXPECTED_RESPONSE: پاسخ غیر منتظره
@@ -1863,6 +1862,8 @@ displays:
     icon: آیکن
     border: حاشیه
     border_label: نمایش حاشیه
+    mask: Masked
+    mask_label: Hide the real value
     text: متن
     text_placeholder: نادیده گرفتن مقدار اختیاری...
   formatted-json-value:
