--- a/app/src/lang/translations/hr-HR.yaml
+++ b/app/src/lang/translations/hr-HR.yaml
@@ -641,7 +641,6 @@ errors:
   VALUE_OUT_OF_RANGE: Vrijednost je izvan raspona
   INVALID_FOREIGN_KEY: Neispravan strani ključ
   UNKNOWN: Neočekivana greška
-  GRAPHQL_VALIDATION_EXCEPTION: GraphQL iznimka provjere valjanosti
   SERVICE_UNAVAILABLE: Usluga nije dostupna
   UNSUPPORTED_MEDIA_TYPE: Nepodržan tip datoteke
   UNEXPECTED_RESPONSE: Neočekivani odgovor
@@ -1916,6 +1915,8 @@ displays:
     icon: Ikona
     border: Obrub
     border_label: Prikaži rubove
+    mask: Maskirano
+    mask_label: Sakrij prave vrijednosti
     text: Tekst
     text_placeholder: Opcionalno nadjačavanje vrijednosti...
   formatted-json-value:
