--- a/app/src/lang/translations/uk-UA.yaml
+++ b/app/src/lang/translations/uk-UA.yaml
@@ -595,7 +595,6 @@ errors:
   VALUE_OUT_OF_RANGE: Значення є поза діапазоном
   INVALID_FOREIGN_KEY: Невірний зовнішній ключ
   UNKNOWN: Неочікувана помилка
-  GRAPHQL_VALIDATION_EXCEPTION: Виключення валідації GraphQL
   SERVICE_UNAVAILABLE: Сервіс недоступний
   UNSUPPORTED_MEDIA_TYPE: Непідтримуваний тип медіа
   UNEXPECTED_RESPONSE: Неочікувана відповідь
@@ -1814,6 +1813,8 @@ displays:
     icon: Іконка
     border: Межа
     border_label: Показати межу
+    mask: Масковано
+    mask_label: Приховати справжнє значення
     text: Текст
     text_placeholder: Необов'язкове перевизначення значення...
   formatted-json-value:
