--- a/app/src/lang/translations/zh-TW.yaml
+++ b/app/src/lang/translations/zh-TW.yaml
@@ -583,7 +583,6 @@ errors:
   VALUE_OUT_OF_RANGE: 內容值超出範圍
   INVALID_FOREIGN_KEY: 外部鍵值錯誤
   UNKNOWN: 未預期的錯誤
-  GRAPHQL_VALIDATION_EXCEPTION: GraphQL 驗證錯誤
   SERVICE_UNAVAILABLE: 服務暫時不可用
   UNSUPPORTED_MEDIA_TYPE: 不支援的媒體類型
   UNEXPECTED_RESPONSE: 非預期的伺服器回應
@@ -1792,6 +1791,8 @@ displays:
     icon: 圖示
     border: 框線
     border_label: 顯示框線
+    mask: 已遮罩
+    mask_label: 隱藏真實值
     text: 文字
     text_placeholder: 選填值覆蓋...
   formatted-json-value:
