--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -1414,7 +1414,7 @@ field_options:
   directus_roles:
     name: The unique name for this role...
     description: A description of this role...
-    ip_access: Add allowed IP addresses, leave empty to allow all...
+    ip_access: Add allowed IP addresses and ranges. Leave empty to allow all...
     fields:
       icon_name: Icon
       name_name: Name
