Various small codebase clean-ups
- Update ignore files after switch to Histoire
- Remove outdated test setups/configs
- Relocate test & Histoire utils to `__` folders
- Remove borked app test (better focus on individual components tests first)
- Fix warnings in app tests, to have clean output in case of success
- Ignore test utils in api production build, remove unnecessary
  tsconfig.prod.json in `@directus/types`
- Remove Storybook ref in docs

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -311,13 +311,14 @@ time: Time
 timestamp: Timestamp
 uuid: UUID
 hash: Hash
-geometry: Geometry (All)
-geometry.Point: Point
-geometry.LineString: LineString
-geometry.Polygon: Polygon
-geometry.MultiPoint: MultiPoint
-geometry.MultiLineString: MultiLineString
-geometry.MultiPolygon: MultiPolygon
+geometry:
+  All: Geometry (All)
+  Point: Point
+  LineString: LineString
+  Polygon: Polygon
+  MultiPoint: MultiPoint
+  MultiLineString: MultiLineString
+  MultiPolygon: MultiPolygon
 theme_auto: Automatic (Based on System)
 theme_light: Light Mode
 theme_dark: Dark Mode
