Move into dedicated util w/ tests, fix check-ip

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -1417,7 +1417,7 @@ field_options:
   directus_roles:
     name: The unique name for this role...
     description: A description of this role...
-    ip_access: Add allowed IP addresses and ranges. Leave empty to allow all...
+    ip_access: Add allowed IP addresses, IP ranges and CIDR blocks. Leave empty to allow all...
     fields:
       icon_name: Icon
       name_name: Name
